Return All Tasks from the API
Update the functionality of TaskContinuityManager to return all tasks from the API, rather than just the most recent task from each device

Flag: android.companion.task_continuity
Tested: Updated Existing Tests
Bug: 400970610
Change-Id: I1a0dd8b112e8370604cfa1ee9df7fa1ead09e3e2